[fixes #17] center image to fix layout issue with narrow image and wide tags

--- a/portfolio/portfolio/static/js/photoblog/components/ImageModal.sass
+++ b/portfolio/portfolio/static/js/photoblog/components/ImageModal.sass
@@ -21,5 +21,9 @@
     left: 50%
     @include transform(translate(-50%, -50%))
 
+    &-image
+      text-align: center;
+
     img
+      display: inline-block
       border-radius: 2px
