--- a/portfolio/portfolio/static/js/photoblog/components/modal/Meta.sass
+++ b/portfolio/portfolio/static/js/photoblog/components/modal/Meta.sass
@@ -11,9 +11,6 @@
     font-family: 'Source Serif Pro'
     font-weight: bold
 
-  &-year
-    font-style: oblique
-
   &-tags
     margin-top: 10px
 
